Se hizo refactoring al boton marvel mediante clip-path

--- a/index.html
+++ b/index.html
@@ -66,15 +66,7 @@
     <!--Seccion de prueba -->
     <div class="contendor-hero">
         <a href="">
-        <div class="botonMarvel">            
-            <div class="btn_cuadroIzq"></div>
-            <div class="btn_trianguloSup"></div>
-            <div class="btn_central">
-                <span class="txtMayusculasB">Vote now</span>
-            </div>
-            <div class="btn_cuadroDer"></div>
-            <div class="btn_trianguloInf"></div>
-        </div>
+        <button class="txtMayusculasB">Vote me</button>
         </a>
     </>
    
